--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,9 @@
 <IfModule mod_rewrite.c>
+
+    <IfModule LiteSpeed>
+        CacheLookup on
+    </IfModule>
+
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
@@ -18,4 +23,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    
 </IfModule>
