--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+
+
+LSCACHE_ESI_ENABLED=
+LSCACHE_DEFAULT_TTL=
+LSCACHE_GUEST_ONLY=
+LSCACHE_DEFAULT_CACHEABILITY=
