Mobile Nav links

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=f2b6ff7d07ba024bf5e8cdab1d01bc51",
-    "/css/app.css": "/css/app.css?id=83edcbefeb986110a91dc44139c3a758"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
