--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tailwindcss": "^3.0.0"
     },
     "dependencies": {
+        "@fontsource/open-sans": "^4.5.8",
         "animate.css": "^4.1.1",
         "aos": "^3.0.0-beta.6"
     }
