--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: kirschbaumdevelopment/laravel-test-runner:8.1
+      image: kirschbaumdevelopment/laravel-test-runner:7.4
 
     services:
       mysql:
@@ -49,4 +49,4 @@ jobs:
 
       - name: Run Testsuite
 
-        run: vendor/bin/phpunit tests/
+        run: vendor/bin/phpunit
