Unit Test Update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,6 @@ jobs:
 
           php artisan key:generate
 
-      - name: Run Testsuite
+      - name: Run Tests
 
         run: vendor/bin/phpunit
