--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f2b6ff7d07ba024bf5e8cdab1d01bc51",
+    "/css/app.css": "/css/app.css?id=ae7d86f38a9884f7204e57b725ad6f82"
 }
